BC-72 | Fixes to SubmissionValidationServiceIntegrationTest after  change to how claims are retrieved for validation
Signed-off-by: Jamie Briggs <jamie.briggs@justice.gov.uk>